--- a/ustcthesis/bib/ustc.bib
+++ b/ustcthesis/bib/ustc.bib
@@ -238,6 +238,13 @@
   year={2012}
 }
 
+@Misc{lecun.com,
+	howpublished = {\url{http://yann.lecun.com/exdb/mnist}},
+	note = {Accessed April 4, 2018},
+	title = {\href{http://yann.lecun.com/exdb/mnist}{http://yann.lecun.com/exdb/mnist}},
+	author = {Yan LeCun}
+}
+
 @Misc{github.com,
 	howpublished = {\url{https://github.com/gwding/draw_convnet}},
 	note = {Accessed June 22, 2017},
