--- a/ustcthesis/bib/ustc.bib
+++ b/ustcthesis/bib/ustc.bib
@@ -238,6 +238,13 @@
   year={2012}
 }
 
+@Misc{imagenet.org,
+	howpublished = {\url{http://www.image-net.org}},
+	note = {Accessed April 7, 2018},
+	title = {\href{http://www.image-net.org}{http://www.image-net.org}},
+	author = {ImageNet}
+}
+
 @Misc{lecun.com,
 	howpublished = {\url{http://yann.lecun.com/exdb/mnist}},
 	note = {Accessed April 4, 2018},
@@ -270,6 +277,14 @@
   pages={26--44},
   year={2000},
   publisher={IEEE}
+}
+
+@inproceedings{han2015learning,
+  title={Learning both weights and connections for efficient neural network},
+  author={Han, Song and Pool, Jeff and Tran, John and Dally, William},
+  booktitle={Advances in neural information processing systems},
+  pages={1135--1143},
+  year={2015}
 }
 
 
