--- a/ustcthesis/bib/ustc.bib
+++ b/ustcthesis/bib/ustc.bib
@@ -245,11 +245,18 @@
 	author = {ImageNet}
 }
 
+@Misc{pjreddie.com,
+	howpublished = {\url{https://pjreddie.com/darknet/yolov2}},
+	note = {Accessed April 9, 2018},
+	title = {\href{https://pjreddie.com/darknet/yolov2}{https://pjreddie.com/darknet/yolov2}},
+	author = {Tiny-YOLO}
+}
+
 @Misc{lecun.com,
 	howpublished = {\url{http://yann.lecun.com/exdb/mnist}},
 	note = {Accessed April 4, 2018},
 	title = {\href{http://yann.lecun.com/exdb/mnist}{http://yann.lecun.com/exdb/mnist}},
-	author = {Yan LeCun}
+	author = {MNIST}
 }
 
 @Misc{github.com,
@@ -286,8 +293,6 @@
   pages={1135--1143},
   year={2015}
 }
-
-
 
 @article{chung2012heterogeneous,
 	title={Heterogeneous Multi-Processing Solution of Exynos 5 Octa with ARM{\textregistered} big. LITTLE™ Technology},
