--- a/ustcthesis/bib/ustc.bib
+++ b/ustcthesis/bib/ustc.bib
@@ -308,3 +308,34 @@
 	year={2015},
 	publisher={Elsevier}
 }
+
+@article{benini1999policy,
+  title={Policy optimization for dynamic power management},
+  author={Benini, Luca and Bogliolo, Alessandro and Paleologo, Giuseppe A and De Micheli, Giovanni},
+  journal={IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems},
+  volume={18},
+  number={6},
+  pages={813--833},
+  year={1999},
+  publisher={IEEE}
+}
+
+@article{周宽久2010嵌入式软硬件低功耗优化研究综述倡,
+  title={嵌入式软硬件低功耗优化研究综述倡},
+  author={周宽久 and 迟宗正 and 西方},
+  journal={计算机应用研究},
+  volume={27},
+  number={2},
+  year={2010}
+}
+
+@article{you2006compilers,
+  title={Compilers for leakage power reduction},
+  author={You, Yi-Ping and Lee, Chingren and Lee, Jenq Kuen},
+  journal={ACM Transactions on Design Automation of Electronic Systems (TODAES)},
+  volume={11},
+  number={1},
+  pages={147--164},
+  year={2006},
+  publisher={ACM}
+}
