--- a/ustcthesis/main.tex
+++ b/ustcthesis/main.tex
@@ -1,7 +1,7 @@
 %!TEX encoding = UTF-8 Unicode
 %!TEX program = xelatex
 
-\documentclass[master]{ustcthesis}
+\documentclass[master,twoside,openright]{ustcthesis}
 % bachelor|master|doctor [professional] [english] [pdf] [authoryear|numebers]
 \usepackage{url}
 \usepackage{hyperref}
