--- a/ustcthesis/bib/ustc.bib
+++ b/ustcthesis/bib/ustc.bib
@@ -339,3 +339,21 @@
   year={2006},
   publisher={ACM}
 }
+
+@article{muller2007dynamic,
+  title={Dynamic time warping},
+  author={M{\"u}ller, Meinard},
+  journal={Information retrieval for music and motion},
+  pages={69--84},
+  year={2007},
+  publisher={Springer}
+}
+
+@inproceedings{keogh2001derivative,
+  title={Derivative dynamic time warping},
+  author={Keogh, Eamonn J and Pazzani, Michael J},
+  booktitle={Proceedings of the 2001 SIAM International Conference on Data Mining},
+  pages={1--11},
+  year={2001},
+  organization={SIAM}
+}
