--- a/ustcthesis/bib/ustc.bib
+++ b/ustcthesis/bib/ustc.bib
@@ -357,3 +357,48 @@
   year={2001},
   organization={SIAM}
 }
+
+@inproceedings{wang2017rethinking,
+  title={Rethinking Energy-Efficiency of Heterogeneous Computing for CNN-Based Mobile Applications},
+  author={Wang, Zhen and Li, Xi and Wang, Chao and Cheng, Zhinan and Song, Jiachen and Zhou, Xuehai},
+  booktitle={I​SPA, 2017 IEEE},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{wang2017building,
+  title={Building A Game Benchmark for Cooperative CPU-GPU with Pseudo User-interaction},
+  author={Wang, Zhen and Cheng, Zhinan and Li, Xi and Wang, Chao and Chen, Xianglan and Zhou, Xuehai},
+  booktitle={I​SPA, 2017 IEEE},
+  year={2017},
+  organization={IEEE}
+}
+
+@article{wang2017dlau,
+  title={DLAU: A scalable deep learning accelerator unit on FPGA},
+  author={Wang, Chao and Gong, Lei and Yu, Qi and Li, Xi and Xie, Yuan and Zhou, Xuehai},
+  journal={IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems},
+  volume={36},
+  number={3},
+  pages={513--517},
+  year={2017},
+  publisher={IEEE}
+}
+
+@inproceedings{yu2015deep,
+  title={A Deep Learning prediction process accelerator based FPGA},
+  author={Yu, Qi and Wang, Chao and Ma, Xiang and Li, Xi and Zhou, Xuehai},
+  booktitle={Cluster, Cloud and Grid Computing (CCGrid), 2015 15th IEEE/ACM International Symposium on},
+  pages={1159--1162},
+  year={2015},
+  organization={IEEE}
+}
+
+@inproceedings{wang2016solar,
+  title={SOLAR: Services-Oriented Learning Architectures},
+  author={Wang, Chao and Li, Xi and Yu, Qi and Wang, Aili and Hung, Patrick and Zhou, Xuehai},
+  booktitle={Web Services (ICWS), 2016 IEEE International Conference on},
+  pages={662--665},
+  year={2016},
+  organization={IEEE}
+}
