--- a/ustcthesis/bib/ustc.bib
+++ b/ustcthesis/bib/ustc.bib
@@ -1,3 +1,63 @@
+@article{lecun2015deep,
+  title={Deep learning},
+  author={LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
+  journal={nature},
+  volume={521},
+  number={7553},
+  pages={436},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+
+@article{simonyan2014very,
+  title={Very deep convolutional networks for large-scale image recognition},
+  author={Simonyan, Karen and Zisserman, Andrew},
+  journal={arXiv preprint arXiv:1409.1556},
+  year={2014}
+}
+
+@article{stone2010opencl,
+  title={OpenCL: A parallel programming standard for heterogeneous computing systems},
+  author={Stone, John E and Gohara, David and Shi, Guochun},
+  journal={Computing in science \& engineering},
+  volume={12},
+  number={3},
+  pages={66--73},
+  year={2010},
+  publisher={IEEE}
+}
+
+@article{xianyi2012openblas,
+  title={OpenBLAS},
+  author={Xianyi, Zhang and Qian, Wang and Chothia, Zaheer},
+  journal={URL: http://xianyi. github. io/OpenBLAS},
+  pages={88},
+  year={2012}
+}
+
+@inproceedings{rupp2010viennacl,
+  title={ViennaCL-a high level linear algebra library for GPUs and multi-core CPUs},
+  author={Rupp, Karl and Rudolf, Florian and Weinbub, Josef},
+  booktitle={Intl. Workshop on GPUs and Scientific Applications},
+  pages={51--56},
+  year={2010}
+}
+
+@article{nugteren2017clblast,
+  title={CLBLast: A tuned openCL BLAS library},
+  author={Nugteren, Cedric},
+  journal={arXiv preprint arXiv:1705.05249},
+  year={2017}
+}
+
+@inproceedings{le2010dynamic,
+  title={Dynamic voltage and frequency scaling: The laws of diminishing returns},
+  author={Le Sueur, Etienne and Heiser, Gernot},
+  booktitle={Proceedings of the 2010 international conference on Power aware computing and systems},
+  pages={1--8},
+  year={2010}
+}
+
 @inproceedings{lane2015can,
   title={Can deep learning revolutionize mobile sensing?},
   author={Lane, Nicholas D and Georgiev, Petko},
@@ -236,6 +296,23 @@
   booktitle={Advances in neural information processing systems},
   pages={1097--1105},
   year={2012}
+}
+
+@book{schalkoff1997artificial,
+  title={Artificial neural networks},
+  author={Schalkoff, Robert J},
+  volume={1},
+  year={1997},
+  publisher={McGraw-Hill New York}
+}
+
+@incollection{bottou2010large,
+  title={Large-scale machine learning with stochastic gradient descent},
+  author={Bottou, L{\'e}on},
+  booktitle={Proceedings of COMPSTAT'2010},
+  pages={177--186},
+  year={2010},
+  publisher={Springer}
 }
 
 @Misc{imagenet.org,
