--- a/ustcthesis/bib/ustc.bib
+++ b/ustcthesis/bib/ustc.bib
@@ -93,6 +93,15 @@
   year={2014}
 }
 
+@inproceedings{deng2013new,
+  title={New types of deep neural network learning for speech recognition and related applications: An overview},
+  author={Deng, Li and Hinton, Geoffrey and Kingsbury, Brian},
+  booktitle={Acoustics, Speech and Signal Processing (ICASSP), 2013 IEEE International Conference on},
+  pages={8599--8603},
+  year={2013},
+  organization={IEEE}
+}
+
 @article{jaderberg2014speeding,
   title={Speeding up convolutional neural networks with low rank expansions},
   author={Jaderberg, Max and Vedaldi, Andrea and Zisserman, Andrew},
@@ -290,12 +299,37 @@
   publisher={IEEE}
 }
 
+@article{lin2013network,
+  title={Network in network},
+  author={Lin, Min and Chen, Qiang and Yan, Shuicheng},
+  journal={arXiv preprint arXiv:1312.4400},
+  year={2013}
+}
+
+@inproceedings{mitra2013use,
+  title={Use of SIMD vector operations to accelerate application code performance on low-powered ARM and Intel platforms},
+  author={Mitra, Gaurav and Johnston, Beau and Rendell, Alistair P and McCreath, Eric and Zhou, Jun},
+  booktitle={Parallel and Distributed Processing Symposium Workshops \& PhD Forum (IPDPSW), 2013 IEEE 27th International},
+  pages={1107--1116},
+  year={2013},
+  organization={IEEE}
+}
+
 @inproceedings{krizhevsky2012imagenet,
   title={Imagenet classification with deep convolutional neural networks},
   author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
   booktitle={Advances in neural information processing systems},
   pages={1097--1105},
   year={2012}
+}
+
+@incollection{guihot2012renderscript,
+  title={RenderScript},
+  author={Guihot, Herv{\'e}},
+  booktitle={Pro Android Apps Performance Optimization},
+  pages={231--263},
+  year={2012},
+  publisher={Springer}
 }
 
 @book{schalkoff1997artificial,
