--- a/ustcthesis/main.tex
+++ b/ustcthesis/main.tex
@@ -61,12 +61,15 @@
 \input{chapters/system}
 \input{chapters/conclusion}
 \bibliography{bib/ustc}
+\cleardoublepage 
 
 %\appendix
 %\chapter{论文规范}
 
 \backmatter
 \input{chapters/acknowledgements}
+\cleardoublepage 
 \input{chapters/publications}
+\cleardoublepage 
 
 \end{document}
