--- a/ustcthesis/bib/ustc.bib
+++ b/ustcthesis/bib/ustc.bib
@@ -1,7 +1,7 @@
 @article{lecun2015deep,
   title={Deep learning},
   author={LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
-  journal={nature},
+  journal={Nature},
   volume={521},
   number={7553},
   pages={436},
@@ -235,7 +235,7 @@
 }
 
 @inproceedings{zhang2015optimizing,
-  title={Optimizing fpga-based accelerator design for deep convolutional neural networks},
+  title={Optimizing {FPGA}-based accelerator design for deep convolutional neural networks},
   author={Zhang, Chen and Li, Peng and Sun, Guangyu and Guan, Yijin and Xiao, Bingjun and Cong, Jason},
   booktitle={Proceedings of the 2015 ACM/SIGDA International Symposium on Field-Programmable Gate Arrays},
   pages={161--170},
@@ -244,24 +244,24 @@
 }
 
 @Misc{hardkernel.com,
-	howpublished = {\url{http://www.hardkernel.com/main/products/prdt_info.php?g_code=g140448267127}},
-	note = {Accessed March 29, 2018},
-	title = {\href{http://www.hardkernel.com/main/products/prdt_info.php?g_code=g140448267127}{ODROID-XU3. http://www.hardkernel.com/main/products/prdt\_info.php?g\\\_code=g140448267127}},
-	author = {Hardkernel}
+  howpublished = {\url{http://www.hardkernel.com/main/products/prdt_info.php?g_code=g140448267127}},
+  note = {Accessed March 29, 2018},
+  title = {\href{http://www.hardkernel.com/main/products/prdt_info.php?g_code=g140448267127}{ODROID-XU3. http://www.hardkernel.com/main/products/prdt\_info.php?g\\\_code=g140448267127}},
+  author = {Hardkernel}
 }
 
 @Misc{intrinsyc.com,
-	howpublished = {\url{https://www.intrinsyc.com/snapdragon-embedded-development-kits/snapdragon-820-development-kit}},
-	note = {Accessed March 29, 2018},
-	title = {\href{https://www.intrinsyc.com/snapdragon-embedded-development-kits/snapdragon-820-development-kit}{Open-Q™ 820 Development Kit. https://www.intrinsyc.com/snapdragon-embedded-development-kits/snapdragon-820-development-kit}},
-	author = {Intrinsyc}
+  howpublished = {\url{https://www.intrinsyc.com/snapdragon-embedded-development-kits/snapdragon-820-development-kit}},
+  note = {Accessed March 29, 2018},
+  title = {\href{https://www.intrinsyc.com/snapdragon-embedded-development-kits/snapdragon-820-development-kit}{Open-Q™ 820 Development Kit. https://www.intrinsyc.com/snapdragon-embedded-development-kits/snapdragon-820-development-kit}},
+  author = {Intrinsyc}
 }
 
 @article{lokhmotov2015gemmbench,
-	title={GEMMbench: a framework for reproducible and collaborative benchmarking of matrix multiplication},
-	author={Lokhmotov, Anton},
-	journal={arXiv preprint arXiv:1511.03742},
-	year={2015}
+  title={GEMMbench: a framework for reproducible and collaborative benchmarking of matrix multiplication},
+  author={Lokhmotov, Anton},
+  journal={arXiv preprint arXiv:1511.03742},
+  year={2015}
 }
 
 @inproceedings{jia2014caffe,
@@ -350,31 +350,31 @@
 }
 
 @Misc{imagenet.org,
-	howpublished = {\url{http://www.image-net.org}},
-	note = {Accessed April 7, 2018},
-	title = {\href{http://www.image-net.org}{http://www.image-net.org}},
-	author = {ImageNet}
+  howpublished = {\url{http://www.image-net.org}},
+  note = {Accessed April 7, 2018},
+  title = {\href{http://www.image-net.org}{http://www.image-net.org}},
+  author = {ImageNet}
 }
 
 @Misc{pjreddie.com,
-	howpublished = {\url{https://pjreddie.com/darknet/yolov2}},
-	note = {Accessed April 9, 2018},
-	title = {\href{https://pjreddie.com/darknet/yolov2}{https://pjreddie.com/darknet/yolov2}},
-	author = {Tiny-YOLO}
+  howpublished = {\url{https://pjreddie.com/darknet/yolov2}},
+  note = {Accessed April 9, 2018},
+  title = {\href{https://pjreddie.com/darknet/yolov2}{https://pjreddie.com/darknet/yolov2}},
+  author = {Tiny-YOLO}
 }
 
 @Misc{lecun.com,
-	howpublished = {\url{http://yann.lecun.com/exdb/mnist}},
-	note = {Accessed April 4, 2018},
-	title = {\href{http://yann.lecun.com/exdb/mnist}{http://yann.lecun.com/exdb/mnist}},
-	author = {MNIST}
+  howpublished = {\url{http://yann.lecun.com/exdb/mnist}},
+  note = {Accessed April 4, 2018},
+  title = {\href{http://yann.lecun.com/exdb/mnist}{http://yann.lecun.com/exdb/mnist}},
+  author = {MNIST}
 }
 
 @Misc{github.com,
-	howpublished = {\url{https://github.com/gwding/draw_convnet}},
-	note = {Accessed June 22, 2017},
-	title = {\href{https://github.com/gwding/draw_convnet}{Draw Convnet. https://github.com/gwding/draw\_convnet}},
-	author = {Weiguang (Gavin) Ding}
+  howpublished = {\url{https://github.com/gwding/draw_convnet}},
+  note = {Accessed June 22, 2017},
+  title = {\href{https://github.com/gwding/draw_convnet}{Draw Convnet. https://github.com/gwding/draw\_convnet}},
+  author = {Weiguang (Gavin) Ding}
 }
 
 @inproceedings{horowitz1994low,
@@ -406,18 +406,18 @@
 }
 
 @article{chung2012heterogeneous,
-	title={Heterogeneous Multi-Processing Solution of Exynos 5 Octa with ARM{\textregistered} big. LITTLE™ Technology},
-	author={Chung, Hongsuk and Kang, Munsik and Cho, Hyun-Duk},
-	journal={Samsung White Paper},
-	year={2012}
+  title={Heterogeneous Multi-Processing Solution of Exynos 5 Octa with ARM{\textregistered} big. LITTLE™ Technology},
+  author={Chung, Hongsuk and Kang, Munsik and Cho, Hyun-Duk},
+  journal={Samsung White Paper},
+  year={2012}
 }
 
 @article{attia2015dynamic,
-	title={Dynamic power management techniques in multi-core architectures: A survey study},
-	author={Attia, Khaled M and El-Hosseini, Mostafa A and Ali, Hesham A},
-	journal={Ain Shams Engineering Journal},
-	year={2015},
-	publisher={Elsevier}
+  title={Dynamic power management techniques in multi-core architectures: A survey study},
+  author={Attia, Khaled M and El-Hosseini, Mostafa A and Ali, Hesham A},
+  journal={Ain Shams Engineering Journal},
+  year={2015},
+  publisher={Elsevier}
 }
 
 @article{benini1999policy,
@@ -486,7 +486,7 @@
 }
 
 @article{wang2017dlau,
-  title={DLAU: A scalable deep learning accelerator unit on FPGA},
+  title={DLAU: A scalable deep learning accelerator unit on {FPGA}},
   author={Wang, Chao and Gong, Lei and Yu, Qi and Li, Xi and Xie, Yuan and Zhou, Xuehai},
   journal={IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems},
   volume={36},
@@ -497,7 +497,7 @@
 }
 
 @inproceedings{yu2015deep,
-  title={A Deep Learning prediction process accelerator based FPGA},
+  title={A Deep Learning prediction process accelerator based {FPGA}},
   author={Yu, Qi and Wang, Chao and Ma, Xiang and Li, Xi and Zhou, Xuehai},
   booktitle={Cluster, Cloud and Grid Computing (CCGrid), 2015 15th IEEE/ACM International Symposium on},
   pages={1159--1162},
