--- a/ustcthesis/bib/ustc.bib
+++ b/ustcthesis/bib/ustc.bib
@@ -380,7 +380,7 @@
 @inproceedings{horowitz1994low,
   title={Low-power digital design},
   author={Horowitz, Mark and Indermaur, Thomas and Gonzalez, Ricardo},
-  booktitle={Low Power Electronics, 1994. Digest of Technical Papers., IEEE Symposium},
+  booktitle={Low Power Electronics, Digest of Technical Papers, 1994 IEEE Symposium},
   pages={8--11},
   year={1994},
   organization={IEEE}
@@ -473,6 +473,7 @@
   title={Rethinking Energy-Efficiency of Heterogeneous Computing for CNN-Based Mobile Applications},
   author={Wang, Zhen and Li, Xi and Wang, Chao and Cheng, Zhinan and Song, Jiachen and Zhou, Xuehai},
   booktitle={I​SPA, 2017 IEEE},
+  pages={454--458},
   year={2017},
   organization={IEEE}
 }
@@ -481,6 +482,7 @@
   title={Building A Game Benchmark for Cooperative CPU-GPU with Pseudo User-interaction},
   author={Wang, Zhen and Cheng, Zhinan and Li, Xi and Wang, Chao and Chen, Xianglan and Zhou, Xuehai},
   booktitle={I​SPA, 2017 IEEE},
+  pages={574--581},
   year={2017},
   organization={IEEE}
 }
