--- a/ustcthesis/main.tex
+++ b/ustcthesis/main.tex
@@ -16,7 +16,7 @@
 \major{计算机系统结构}
 \supervisor{周学海\ 教授}
 \cosupervisor{李曦\ 副教授}
-% \date{二〇一八年四月二十日}    % 注释掉则为今日
+\date{二〇一八年四月}    % 注释掉则为今日
 % \professionaltype{专业学位类型}
 % \secrettext{机密\quad 小于等于20年}    % 内部|秘密|机密，注释本行则不保密
 
@@ -25,7 +25,7 @@
 \enmajor{Computer Architecture}
 \ensupervisor{Prof. Xuehai Zhou}
 \encosupervisor{Assoc. Prof. Xi Li}
-% \endate{April 20, 2018}    % today if commented
+\endate{April, 2018}    % today if commented
 % \enprofessionaltype{Professional degree type}
 % \ensecrettext{Confidential\quad Less than or equal to 20 years}
 % Internal|Secret|Confidential
